src/app/components/parts/page-container/page-container.component.css
@import url('../../../../styles.css');

mat-sidenav-container {
    height: 100%;
}

.banner-notification {
    display: flex;
    align-items: center;
    align-content: center;
    justify-content: center;
    text-align: center;
    background-color: #336F9C;
    color: white;
    padding: 1rem;
    box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.6);
}

.header-message i {
    font-size: 16px;
    margin: 0 1rem 0 1rem;
}

.header {
    background: var(--theme);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 10;
}

#header-title:hover {
    cursor: pointer;
}

.header-content {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
    height: 70px;
    max-width: 110em;
    margin: auto;
}
.menu-title {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    color: white;
}

.menu-title .title {
    font-size: 20px;
    line-height: 1;
    letter-spacing: .02em;
    font-weight: 400;
}

.menu-title img {
    margin-right: 1rem;
}

main {
    position: fixed;
    top: 70px;
    bottom: 0;
    overflow-y: auto;
    width: 100%;
}

#main-scroll {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

mat-sidenav-layout {
    background-color: whitesmoke;
    color: var(--theme);
}

mat-sidenav {
    background-color: var(--theme);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

mat-sidenav .title {
    font-size: larger;
    margin: 2rem;
    color: white;
}

.header-content i {
    color: white
}

.container-nav {
    display: inline-flex;
}

.cohort-option{
    margin-top: 13px;
    padding-right: 1em;
}

.logo-small {
    margin-top: 10px;
    margin-left: 1rem;
    display: flex;
}

.logo-small img {
    height: auto;
    width: 70px;
}
.mat-icon {
    font-size: 19px;
    padding-top: 0.75em;
    color: white;
}

::ng-deep .cohort-info{
    white-space: pre-line;
}

.cohort-option {
    padding-top: 0.2em;
}

.cohort-information{
    padding-top: 0.9em;
}

@media (min-width: 0px) and (max-width: 1285px) {

    .header-message {
        font-size: 11px;
    }

    .header-content {
        margin: 0 1rem 0 1rem;
    }

    .mat-icon {
        font-size: 19px;
        padding-top: 0.75em;
        color: white;
     }

    mat-sidenav {
        z-index: 30;
        min-width: 200px;
    }
    
    ::ng-deep .cohort-info{
        white-space: pre-line;
    }

    .backdrop-cover {
        z-index: 20;
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(0, 0, 0, 0.5);
    }

    .search-content {
        padding: 1rem 0 1rem 0;
        margin-right: 2rem;
        margin-left: 1rem;
    }

    .menu-title .title {
        font-size: medium;
    }
}

